--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -4,31 +4,30 @@
 2020-11-24 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
 2020-11-24 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
 2020-11-24 ▲愛知工科大学・データサイエンスまたはＡＩ #jobhunt due:2020-10-16
-2020-11-24 香川大学・情報通信コース #jobhunt due:2020-11-20
 2020-11-24 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2020-11-24
 2020-11-24 kindle #current due:2020-11-24
 2020-11-24 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2020-11-24
 2020-11-24 wifi dongle @ home #current due:2020-11-24
-2020-11-24 広島大学・情報メディア教育研究センター #jobhunt due:2020-11-24
-2020-11-24 九州大学・ロシア語担当 #jobhunt due:2020-11-26
 2020-11-24 (J)MDPI.Green.Sensors #deadlines due:2020-11-30
+2020-11-24 (J)MDPI.green.sensor.nets #deadlines due:2020-11-30
 2020-11-24 (J)TailorFrancis.SmartCities #deadlines due:2020-11-30
-2020-11-24 京都大学・国際高等教育院附属データ科学イノベーション教育研究センター #jobhunt due:2020-11-30
+2020-11-24 EAI.ESCRIPTS.covid19.and.cloud #deadlines due:2020-11-30
+2020-11-24 PerFlow(springer).device.collaboration #deadlines due:2020-11-30
 2020-11-24 信州大学.通信システム分野 #jobhunt due:2020-11-30
 2020-11-24 名古屋商科大学・情報 #jobhunt due:2020-11-30
-2020-11-24 岐阜大学・数理・データサイエンス #jobhunt due:2020-11-30
-2020-11-24 情報・経営システム工学 #jobhunt due:2020-11-30
-2020-11-24 東京大学・人間エネルギー環境学分野 #jobhunt due:2020-11-30
-2020-11-24 金沢大学・先端科学・社会共創推進機構 #jobhunt due:2020-11-30
-2020-11-24 金沢大学・先端科学・社会共創推進機構・人材育成グループ #jobhunt due:2020-11-30
 2020-11-24 長岡技術科学大学・情報・経営システム工学 #jobhunt due:2020-11-30
+2020-11-24 ICICT.covid19(~J) #deadlines due:2020-11-31
 2020-11-24 journal.mdpi.blockchain.for.5g.and.IoT.(opencall) #deadlines due:2020-12-00
 2020-11-24 (3) docomocycle data collect #regulars due:2020-12-01
+2020-11-24 (J)IEEEVTech.aerial.mobility(gmapsroutes) #deadlines due:2020-12-01
+2020-11-24 IEEE.ComSoc.DRCN.reliable.commnets(~J) #deadlines due:2020-12-01
 2020-11-24 IETj.smartcities #deadlines due:2020-12-01
 2020-11-24 ① money (weekly) #regulars due:2020-12-01
 2020-11-24 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2020-12-01
 2020-11-24 東京工業大学・ソフトウェア工学分野 #jobhunt due:2020-12-01
 2020-11-24 広島工業大学・コンピュータシステム #jobhunt due:2020-12-03
+2020-11-24 (J)ACM.STSAS(spatial.algorithms) #deadlines due:2020-12-04
+2020-11-24 3rd.IEEE(ICBC).blockchain #deadlines due:2020-12-04
 2020-11-24 audio automation for open campus #midterm due:2020-12-04
 2020-11-24 kgu zemi faces #midterm due:2020-12-04
 2020-11-24 samsung redo cygwin #midterm due:2020-12-04
@@ -46,36 +45,60 @@
 2020-11-24 名古屋大学・システム研究所未来エレクトロニクス集積研究センター #jobhunt due:2020-12-09
 2020-11-24 MDPI.geotech.spatiotemporal #deadlines due:2020-12-10
 2020-11-24 九州産業大学理工学部・機械工学科・メカトロニクス #jobhunt due:2020-12-11
-2020-11-24 NetSoft #deadlines due:2020-12-14
+2020-11-24 NetSoft.netsoftwarization #deadlines due:2020-12-14
 2020-11-24 東京通信大学・情報システム分野 #jobhunt due:2020-12-14
 2020-11-24 静岡理工科大学・電子情報分野 #jobhunt due:2020-12-14
+2020-11-24 (J)MDPI.IoE #deadlines due:2020-12-15
+2020-11-24 IEEE.GI(infocom).global.internet #deadlines due:2020-12-15
 2020-11-24 INFOCOM #deadlines due:2020-12-15
+2020-11-24 INFOCOMw.security.privacy.bigdata #deadlines due:2020-12-15
+2020-11-24 NextGenSys(NGS) #deadlines due:2020-12-15
 2020-11-24 PerCom.(pervasive).demos #deadlines due:2020-12-15
 2020-11-24 琉球大学・総合情報処理センター #jobhunt due:2020-12-15
 2020-11-24 千葉大学・情報工学・画像工学・医工学 #jobhunt due:2020-12-16
 2020-11-24 NAIST・情報科学領域・コンピューティング・アーキテクチャ分野 #jobhunt due:2020-12-18
 2020-11-24 立正大学・環境情報学・環境科学分野 #jobhunt due:2020-12-18
+2020-11-24 (J)MDPI.smart.sensing.D2D #deadlines due:2020-12-20
+2020-11-24 (J)Elsevier.IoT.for.COVID19 #deadlines due:2020-12-21
+2020-11-24 (J)Springer.JONS.netmng.with.AI #deadlines due:2020-12-21
 2020-11-24 adobe @ work, home #longterm due:2020-12-24
 2020-11-24 windows auth @ zaniya #longterm due:2020-12-24
+2020-11-24 (J)Elsevier(IoT.attacks) #deadlines due:2020-12-31
 2020-11-24 (J)MDPI.Drones.swarms #deadlines due:2020-12-31
 2020-11-24 (J)MDPI.Sensing.and.IoT #deadlines due:2020-12-31
 2020-11-24 (J)MDPI.WirelessSensors.ITS #deadlines due:2020-12-31
 2020-11-24 MDPI.drone.swarms #deadlines due:2020-12-31
 2020-11-24 リージョナルフィッシュ株式会社・ゲノム編集水産育種のバイオインフォマティクス研究員の募集【リモートワーク可】 #jobhunt due:2020-12-31
 2020-11-24 (J)ComMag.Network4Covid #deadlines due:2021-01-01
+2020-11-24 IEEE.ICFEC.fog.edge #deadlines due:2021-01-03
 2020-11-24 IFIP.Networking(~J) #deadlines due:2021-01-05
+2020-11-24 IEEE.ICDCS.distributed.comp.systems #deadlines due:2021-01-06
+2020-11-24 ITS(IM).autonomous.vehicles #deadlines due:2021-01-08
 2020-11-24 足利大学工学部・機械分野【再公募】 #jobhunt due:2021-01-08
 2020-11-24 jour.ICTexpress.edge #deadlines due:2021-01-10
 2020-11-24 (J)ASOC.CompIntel.(transformative) #deadlines due:2021-01-15
+2020-11-24 (J)Elsevier.ASOC.transformative.computing #deadlines due:2021-01-15
+2020-11-24 (J)MDPI.Sensors.human.motion #deadlines due:2021-01-15
+2020-11-24 COMPSAC.intel.collab.world #deadlines due:2021-01-15
+2020-11-24 IEEE.WTMC.trafficmeasurement4sec #deadlines due:2021-01-15
 2020-11-24 IFIP.Networking #deadlines due:2021-01-15
 2020-11-24 J.Elsevier.compintelligence #deadlines due:2021-01-15
 2020-11-24 journal.ISF.AI.for.covid #deadlines due:2021-01-15
+2020-11-24 ICC.GreenSmartEnvs #deadlines due:2021-01-20
+2020-11-24 IEEE.ICC.emerging.topics.in.6G #deadlines due:2021-01-20
+2020-11-24 (J)EAI.GeneralCollectiveIntelligence #deadlines due:2021-01-30
+2020-11-24 (J)Springer.AI4people #deadlines due:2021-01-31
 2020-11-24 MDPI.sustain #deadlines due:2021-01-31
 2020-11-24 東京通信大学・情報システム・データサイエンス分野 #jobhunt due:2021-01-31
+2020-11-24 (J)MDPI.Signals.cybersec.resilience #deadlines due:2021-02-15
+2020-11-24 (J)JCN.covid19 #deadlines due:2021-02-20
 2020-11-24 (J)MDPI.Telecom.Journal #deadlines due:2021-02-21
+2020-11-24 (J)Elsevier.ICN(blockchain.for.covid) #deadlines due:2021-02-28
 2020-11-24 jour.mdpi.vehicularfleets #deadlines due:2021-02-28
 2020-11-24 ★青山学院大学・経済学部経済学科・統計学・データサイエンス #jobhunt due:2021-03-12
 2020-11-24 KSEM.knowledge #deadlines due:2021-03-15
 2020-11-24 ★東京理科大学・工学部情報工学科・インテリジェントシステム分野 #jobhunt due:2021-03-29
+2020-11-24 (J)ACMIntTechJ.multiagent.systems.for.IoT #deadlines due:2021-03-31
+2020-11-24 (J)Elsevier(edge.iot) #deadlines due:2021-03-31
 2020-11-24 (J)IEEE.Sensors.indoor.positioning #deadlines due:2021-03-31
 2020-11-24 福岡大学工学部電子情報工学科 #jobhunt due:2021-03-31
