--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -1,88 +1,95 @@
-2020-12-13 新潟大学・システムソフトウェア・並列分散処理 #jobhunt due:2020-01-14
-2020-12-13 三谷産業フェア★金沢 #fundhunt due:2020-09-01
-2020-12-13 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
-2020-12-13 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
-2020-12-13 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
-2020-12-13 ▲愛知工科大学・データサイエンスまたはＡＩ #jobhunt due:2020-10-16
-2020-12-13 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2020-12-13
-2020-12-13 kindle #current due:2020-12-13
-2020-12-13 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2020-12-13
-2020-12-13 wifi dongle @ home #current due:2020-12-13
-2020-12-13 ★NetSoft@Tokyo #deadlines due:2020-12-14
-2020-12-13 東京通信大学・情報システム分野 #jobhunt due:2020-12-14
-2020-12-13 静岡理工科大学・電子情報分野 #jobhunt due:2020-12-14
-2020-12-13 (J)MDPI.IoE #deadlines due:2020-12-15
-2020-12-13 IEEE.GI(infocom).global.internet #deadlines due:2020-12-15
-2020-12-13 INFOCOM #deadlines due:2020-12-15
-2020-12-13 INFOCOMw.security.privacy.bigdata #deadlines due:2020-12-15
-2020-12-13 NextGenSys(NGS) #deadlines due:2020-12-15
-2020-12-13 PerCom.(pervasive).demos #deadlines due:2020-12-15
-2020-12-13 ★IEEE.ACM.CCGrid #deadlines due:2020-12-15
-2020-12-13 琉球大学・総合情報処理センター #jobhunt due:2020-12-15
-2020-12-13 千葉大学・情報工学・画像工学・医工学 #jobhunt due:2020-12-16
-2020-12-13 NAIST・情報科学領域・コンピューティング・アーキテクチャ分野 #jobhunt due:2020-12-18
-2020-12-13 立正大学・環境情報学・環境科学分野 #jobhunt due:2020-12-18
-2020-12-13 (3) docomocycle data collect #regulars due:2020-12-20
-2020-12-13 (J)MDPI.smart.sensing.D2D #deadlines due:2020-12-20
-2020-12-13 ① money (weekly) #regulars due:2020-12-20
-2020-12-13 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2020-12-20
-2020-12-13 ★ⒿIJITS.infotech.and.security #deadlines due:2020-12-20
-2020-12-13 (J)Elsevier.IoT.for.COVID19 #deadlines due:2020-12-21
-2020-12-13 (J)Springer.JONS.netmng.with.AI #deadlines due:2020-12-21
-2020-12-13 audio automation for open campus #midterm due:2020-12-23
-2020-12-13 kgu zemi faces #midterm due:2020-12-23
-2020-12-13 samsung redo cygwin #midterm due:2020-12-23
-2020-12-13 simplify yalms #midterm due:2020-12-23
-2020-12-13 tokyo hotels and schedule #midterm due:2020-12-23
-2020-12-13 video recognition engine (sotsuken) #midterm due:2020-12-23
-2020-12-13 (J)Elsevier(IoT.attacks) #deadlines due:2020-12-31
-2020-12-13 (J)MDPI.Sensing.and.IoT #deadlines due:2020-12-31
-2020-12-13 (J)MDPI.WirelessSensors.ITS #deadlines due:2020-12-31
-2020-12-13 ⒿMDPI.edge.drone.swarms #deadlines due:2020-12-31
-2020-12-13 ★ⒿElectronics.IoT #deadlines due:2020-12-31
-2020-12-13 リージョナルフィッシュ株式会社・ゲノム編集水産育種のバイオインフォマティクス研究員の募集【リモートワーク可】 #jobhunt due:2020-12-31
-2020-12-13 (J)ComMag.Network4Covid #deadlines due:2021-01-01
-2020-12-13 IEEE.ICFEC.fog.edge #deadlines due:2021-01-03
-2020-12-13 IEEE.ICDCS.distributed.comp.systems #deadlines due:2021-01-06
-2020-12-13 EAI.Mobimedia.mobilemultimedia #deadlines due:2021-01-07
-2020-12-13 ITS(IM).autonomous.vehicles #deadlines due:2021-01-08
-2020-12-13 足利大学工学部・機械分野【再公募】 #jobhunt due:2021-01-08
-2020-12-13 jour.ICTexpress.edge #deadlines due:2021-01-10
-2020-12-13 ⒿICTExpress.mobile.edge.comp #deadlines due:2021-01-10
-2020-12-13 adobe @ work, home #longterm due:2021-01-12
-2020-12-13 windows auth @ zaniya #longterm due:2021-01-12
-2020-12-13 (J)ASOC.CompIntel.(transformative) #deadlines due:2021-01-15
-2020-12-13 (J)Elsevier.ASOC.transformative.computing #deadlines due:2021-01-15
-2020-12-13 (J)MDPI.Sensors.human.motion #deadlines due:2021-01-15
-2020-12-13 COMPSAC.intel.collab.world #deadlines due:2021-01-15
-2020-12-13 IEEE.WTMC.traffic.measurement #deadlines due:2021-01-15
-2020-12-13 IEEE.WTMC.trafficmeasurement4sec #deadlines due:2021-01-15
-2020-12-13 IFIP.Networking #deadlines due:2021-01-15
-2020-12-13 J.Elsevier.compintelligence #deadlines due:2021-01-15
-2020-12-13 journal.ISF.AI.for.covid #deadlines due:2021-01-15
-2020-12-13 ACM.SIGCOMM #deadlines due:2021-01-20
-2020-12-13 ICC.GreenSmartEnvs #deadlines due:2021-01-20
-2020-12-13 ICCw.DDINS.intelligence4nets #deadlines due:2021-01-20
-2020-12-13 IEEE.ICC.emerging.topics.in.6G #deadlines due:2021-01-20
-2020-12-13 (J)EAI.GeneralCollectiveIntelligence #deadlines due:2021-01-30
-2020-12-13 (J)Springer.AI4people #deadlines due:2021-01-31
-2020-12-13 MDPI.sustain #deadlines due:2021-01-31
-2020-12-13 東京通信大学・情報システム・データサイエンス分野 #jobhunt due:2021-01-31
-2020-12-13 INFOCOM.demos.posters #deadlines due:2021-02-07
-2020-12-13 (J)MDPI.Signals.cybersec.resilience #deadlines due:2021-02-15
-2020-12-13 (J)JCN.covid19 #deadlines due:2021-02-20
-2020-12-13 (J)MDPI.Telecom.Journal #deadlines due:2021-02-21
-2020-12-13 (J)MDPI.mobile.computing #deadlines due:2021-02-21
-2020-12-13 ⒿIEEEJ.intell.wireless.control.systems #deadlines due:2021-02-25
-2020-12-13 (J)Elsevier.ICN(blockchain.for.covid) #deadlines due:2021-02-28
-2020-12-13 jour.mdpi.vehicularfleets #deadlines due:2021-02-28
-2020-12-13 ficloud.future.cloud #deadlines due:2021-03-10
-2020-12-13 ★青山学院大学・経済学部経済学科・統計学・データサイエンス #jobhunt due:2021-03-12
-2020-12-13 KSEM.knowledge #deadlines due:2021-03-15
-2020-12-13 ⒿIEEEsensors.inforpositioning #deadlines due:2021-03-21
-2020-12-13 ★東京理科大学・工学部情報工学科・インテリジェントシステム分野 #jobhunt due:2021-03-29
-2020-12-13 (J)ACMIntTechJ.multiagent.systems.for.IoT #deadlines due:2021-03-31
-2020-12-13 (J)Elsevier(edge.iot) #deadlines due:2021-03-31
-2020-12-13 (J)IEEE.Sensors.indoor.positioning #deadlines due:2021-03-31
-2020-12-13 福岡大学工学部電子情報工学科 #jobhunt due:2021-03-31
-2020-12-13 ⒿMDPI.HPC.math #deadlines due:2021-06-30
+2020-12-21 新潟大学・システムソフトウェア・並列分散処理 #jobhunt due:2020-01-14
+2020-12-21 三谷産業フェア★金沢 #fundhunt due:2020-09-01
+2020-12-21 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
+2020-12-21 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
+2020-12-21 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
+2020-12-21 ▲愛知工科大学・データサイエンスまたはＡＩ #jobhunt due:2020-10-16
+2020-12-21 ★NetSoft@Tokyo #deadlines due:2020-12-14
+2020-12-21 (J)MDPI.IoE #deadlines due:2020-12-15
+2020-12-21 IEEE.GI(infocom).global.internet #deadlines due:2020-12-15
+2020-12-21 INFOCOM #deadlines due:2020-12-15
+2020-12-21 INFOCOMw.security.privacy.bigdata #deadlines due:2020-12-15
+2020-12-21 NextGenSys(NGS) #deadlines due:2020-12-15
+2020-12-21 PerCom.(pervasive).demos #deadlines due:2020-12-15
+2020-12-21 ★IEEE.ACM.CCGrid #deadlines due:2020-12-15
+2020-12-21 (J)MDPI.smart.sensing.D2D #deadlines due:2020-12-20
+2020-12-21 ★ⒿIJITS.infotech.and.security #deadlines due:2020-12-20
+2020-12-21 (J)Elsevier.IoT.for.COVID19 #deadlines due:2020-12-21
+2020-12-21 (J)Springer.JONS.netmng.with.AI #deadlines due:2020-12-21
+2020-12-21 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2020-12-21
+2020-12-21 kindle #current due:2020-12-21
+2020-12-21 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2020-12-21
+2020-12-21 wifi dongle @ home #current due:2020-12-21
+2020-12-21 (3) docomocycle data collect #regulars due:2020-12-28
+2020-12-21 ① money (weekly) #regulars due:2020-12-28
+2020-12-21 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2020-12-28
+2020-12-21 東日本国際大学・情報学 #jobhunt due:2020-12-30
+2020-12-21 (J)Elsevier(IoT.attacks) #deadlines due:2020-12-31
+2020-12-21 (J)MDPI.Sensing.and.IoT #deadlines due:2020-12-31
+2020-12-21 (J)MDPI.WirelessSensors.ITS #deadlines due:2020-12-31
+2020-12-21 audio automation for open campus #midterm due:2020-12-31
+2020-12-21 kgu zemi faces #midterm due:2020-12-31
+2020-12-21 samsung redo cygwin #midterm due:2020-12-31
+2020-12-21 simplify yalms #midterm due:2020-12-31
+2020-12-21 tokyo hotels and schedule #midterm due:2020-12-31
+2020-12-21 video recognition engine (sotsuken) #midterm due:2020-12-31
+2020-12-21 ⒿMDPI.edge.drone.swarms #deadlines due:2020-12-31
+2020-12-21 ★ⒿElectronics.IoT #deadlines due:2020-12-31
+2020-12-21 リージョナルフィッシュ株式会社・ゲノム編集水産育種のバイオインフォマティクス研究員の募集【リモートワーク可】 #jobhunt due:2020-12-31
+2020-12-21 (J)ComMag.Network4Covid #deadlines due:2021-01-01
+2020-12-21 IEEE.ICFEC.fog.edge #deadlines due:2021-01-03
+2020-12-21 IEEE.ICDCS.distributed.comp.systems #deadlines due:2021-01-06
+2020-12-21 EAI.Mobimedia.mobilemultimedia #deadlines due:2021-01-07
+2020-12-21 ITS(IM).autonomous.vehicles #deadlines due:2021-01-08
+2020-12-21 足利大学工学部・機械分野【再公募】 #jobhunt due:2021-01-08
+2020-12-21 jour.ICTexpress.edge #deadlines due:2021-01-10
+2020-12-21 ⒿICTExpress.mobile.edge.comp #deadlines due:2021-01-10
+2020-12-21 (J)ASOC.CompIntel.(transformative) #deadlines due:2021-01-15
+2020-12-21 (J)Elsevier.ASOC.transformative.computing #deadlines due:2021-01-15
+2020-12-21 (J)MDPI.Sensors.human.motion #deadlines due:2021-01-15
+2020-12-21 COMPSAC.intel.collab.world #deadlines due:2021-01-15
+2020-12-21 IEEE.WTMC.traffic.measurement #deadlines due:2021-01-15
+2020-12-21 IEEE.WTMC.trafficmeasurement4sec #deadlines due:2021-01-15
+2020-12-21 IFIP.Networking #deadlines due:2021-01-15
+2020-12-21 J.Elsevier.compintelligence #deadlines due:2021-01-15
+2020-12-21 journal.ISF.AI.for.covid #deadlines due:2021-01-15
+2020-12-21 東京工業大学・理論計算機科学・サイバーセキュリティ分野 #jobhunt due:2021-01-17
+2020-12-21 ACM.SIGCOMM #deadlines due:2021-01-20
+2020-12-21 ICC.GreenSmartEnvs #deadlines due:2021-01-20
+2020-12-21 ICCw.DDINS.intelligence4nets #deadlines due:2021-01-20
+2020-12-21 IEEE.ICC.emerging.topics.in.6G #deadlines due:2021-01-20
+2020-12-21 adobe @ work, home #longterm due:2021-01-20
+2020-12-21 windows auth @ zaniya #longterm due:2021-01-20
+2020-12-21 足利大学・人工知能関連分野【再公募】 #jobhunt due:2021-01-29
+2020-12-21 足利大学・工学部・情報工学、情報科学センター【再公募】 #jobhunt due:2021-01-29
+2020-12-21 足利大学工学部・人工知能関連分野【再公募】 #jobhunt due:2021-01-29
+2020-12-21 (J)EAI.GeneralCollectiveIntelligence #deadlines due:2021-01-30
+2020-12-21 (J)Springer.AI4people #deadlines due:2021-01-31
+2020-12-21 MDPI.sustain #deadlines due:2021-01-31
+2020-12-21 東京通信大学・情報システム・データサイエンス分野 #jobhunt due:2021-01-31
+2020-12-21 金城学院大学・生活環境学部生活マネジメント学科・情報学 #jobhunt due:2021-02-01
+2020-12-21 INFOCOM.demos.posters #deadlines due:2021-02-07
+2020-12-21 東京工業大学・ソフトウェア工学分野 #jobhunt due:2021-02-09
+2020-12-21 (J)MDPI.Signals.cybersec.resilience #deadlines due:2021-02-15
+2020-12-21 (J)JCN.covid19 #deadlines due:2021-02-20
+2020-12-21 (J)MDPI.Telecom.Journal #deadlines due:2021-02-21
+2020-12-21 (J)MDPI.mobile.computing #deadlines due:2021-02-21
+2020-12-21 ⒿIEEEJ.intell.wireless.control.systems #deadlines due:2021-02-25
+2020-12-21 (J)Elsevier.ICN(blockchain.for.covid) #deadlines due:2021-02-28
+2020-12-21 jour.mdpi.vehicularfleets #deadlines due:2021-02-28
+2020-12-21 岩手大学・知能・メディア情報コース・准教授公募 #jobhunt due:2021-02-28
+2020-12-21 株式会社ベイシスコンサルティング・リサーチャー募集 #jobhunt due:2021-02-28
+2020-12-21 ficloud.future.cloud #deadlines due:2021-03-10
+2020-12-21 ★青山学院大学・経済学部経済学科・統計学・データサイエンス #jobhunt due:2021-03-12
+2020-12-21 KSEM.knowledge #deadlines due:2021-03-15
+2020-12-21 北海道大学・メディアネットワーク部門・情報通信システム学分野・教授 #jobhunt due:2021-03-19
+2020-12-21 香川大学・創造工学部・情報通信コース #jobhunt due:2021-03-19
+2020-12-21 ⒿIEEEsensors.inforpositioning #deadlines due:2021-03-21
+2020-12-21 ★東京理科大学・工学部情報工学科・インテリジェントシステム分野 #jobhunt due:2021-03-29
+2020-12-21 (J)ACMIntTechJ.multiagent.systems.for.IoT #deadlines due:2021-03-31
+2020-12-21 (J)Elsevier(edge.iot) #deadlines due:2021-03-31
+2020-12-21 (J)IEEE.Sensors.indoor.positioning #deadlines due:2021-03-31
+2020-12-21 福岡大学工学部電子情報工学科 #jobhunt due:2021-03-31
+2020-12-21 鳥取大学工学部教員公募・ロボティクス #jobhunt due:2021-03-31
+2020-12-21 岡山理科大学・計算機工学・コンピュータシステム分野 #jobhunt due:2021-05-10
+2020-12-21 ⒿMDPI.HPC.math #deadlines due:2021-06-30
