--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -190,8 +190,8 @@
 2021-02-23 jour.mdpi.vehicularfleets #deadlines due:2021-02-28
 2021-02-23 ★online京都情報大学院大学・情報学分野 #jobhunt due:2021-02-28
 2021-02-23 ★online国際基督教大学・情報学基礎、計算基盤（准教授、教授公募） #jobhunt due:2021-02-28
+2021-02-23 ★online東京国際大学・教授、准教授、または講師の公募（データサイエンス、AI等分野） #jobhunt due:2021-02-28
 2021-02-23 岩手大学・知能・メディア情報コース・准教授公募 #jobhunt due:2021-02-28
-2021-02-23 東京国際大学・教授、准教授、または講師の公募（データサイエンス、AI等分野） #jobhunt due:2021-02-28
 2021-02-23 武庫川女子大学・情報ネットワーク分野 #jobhunt due:2021-02-28
 2021-02-23 (J)IEET.green.internet.and.services #deadlines due:2021-03-01
 2021-02-23 (J)Springer.queueing.learning.control #deadlines due:2021-03-01
